# textbox

./: .clang-format  .clangd  .gitmodules  .neocmake.toml  CHANGES.md  CLAUDE.md  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  TABLE_EXAMPLE.md  UDIFF_EXAMPLE.md  config.hh.in  srchilite_map.cc  srchilite_map.hh  test_complete_features.cc  test_cursor.cc  test_final_behavior.cc  test_heading_comprehensive.cc  test_heading_debug2.cc  test_heading_final.cc  test_heading_numbering.cc  test_heading_simple.cc  test_heading_verify.cc  test_list_formatting.cc  test_manual_numbers.cc  test_numbering_final.cc  test_skip_numbering.cc  test_table.cc  test_udiff.cc  test_verify_behavior.cc  test_visual.cc  textbox.cc  textbox.hh  textbox_test.cc
